--- a/pages/dashboard/Dashboard.module.scss
+++ b/pages/dashboard/Dashboard.module.scss
@@ -1,17 +1,47 @@
-.mainContainer{
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        .chart {
-          width: 50%;
-          margin-bottom: 20px;
-        }
-        .text{
-            text-align: center;
-        }
+.mainContainer {
+  width: 100%;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+
+  .container {
+    display: flex;
+    flex-direction: column;
+
+    .chart {
+      width: 100%; 
+      margin-bottom: 20px;
+      justify-content: center;
+      align-items: center;
+      margin-left: auto;
+      margin-right: auto;
+      @media (min-width: 768px) {
+        width: 50%; 
       }
+    }
+    .genelChart{
+      justify-content: center;
+      align-items: center;
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+      @media (min-width: 768px) {
+        width: 60%; 
+      }
+
+    }
+
+    .text {
+      text-align: center ;
+      font-weight: bolder;
+
+    }
+    .textBig{
+      font-size: 24px;
+      font-weight: bolder;
+      text-align: center ;
+
+    }
+  }
 }
